--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,11 @@
     "author": "BiswaViraj",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
-        "graphql": "^14.5.8"
+        "graphql": "^14.5.8",
+        "lodash": "^4.17.15",
+        "mongoose": "^5.7.14"
     }
 }
